--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,15 @@ spring.datasource.password=
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#spring.cache.type=redis
+#spring.redis.host=http://127.0.0.1:4040
+#spring.redis.port=6379
+#
+#spring.cache.redis.time-to-live=100000
