--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,19 @@
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-cache</artifactId>
 	    </dependency>
+	       
+	    <dependency>
+		     <groupId>org.springdoc</groupId>
+		     <artifactId>springdoc-openapi-ui</artifactId>
+		     <version>1.6.13</version>
+		</dependency>
+		   
 	    
-	   <!-- <dependency>
+	    <dependency>
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-data-redis</artifactId>
 	    </dependency>
-	    -->
+	   
 		
 		<dependency>
 			<groupId>com.h2database</groupId>
