--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-#spring.cache.type=redis
-#spring.redis.host=http://127.0.0.1:4040
-#spring.redis.port=6379
-#
+#opemApi
+springdoc.show-login-endpoint=true
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
 #spring.cache.redis.time-to-live=100000
